# riskfw

./: .gitignore  .windsurfignore  CHANGELOG.md  Makefile  README.md  RELEASE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/riskfw/: __init__.py  constants.py  exceptions.py
src/riskfw/equipment/: __init__.py  checker.py  models.py
src/riskfw/ignition/: __init__.py  assessor.py  models.py
src/riskfw/reports/: __init__.py  builder.py
src/riskfw/substances/: __init__.py  database.py  lookup.py
src/riskfw/zones/: __init__.py  calculator.py  models.py  ventilation.py
tests/: test_equipment.py  test_ignition.py  test_reports.py  test_substances.py  test_zones.py
