[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskfw"
version = "0.1.0"
description = "Risk Framework — Safety calculations for explosion protection (TRGS 721/722, ATEX, EN 1127-1)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Achim Dehnert", email = "achim.dehnert@iil.gmbh"}
]
keywords = ["explosion-protection", "atex", "trgs721", "safety", "ex-schutz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = []  # stdlib only

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/riskfw"
Repository = "https://github.com/achimdehnert/riskfw"

[tool.hatch.build.targets.wheel]
packages = ["src/riskfw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_should_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
